--- a/tropical_traverse/src/app/components/carousel.css
+++ b/tropical_traverse/src/app/components/carousel.css
@@ -1,13 +1,59 @@
-.slider{
-    max-width: 1200px;
-    width: 100%;
-    height: 500px;
-    margin: 0 auto;
+/* ensure all the styles have a border box */
+*, 
+*::before, 
+*::after{
+    box-sizing: border-box;
 }
 
-.slider_image{
-    object-fit: cover;
+/* style for the carousel box area */
+.carousel{
+    max-width: 100%;
+    max-height: 100%;
     width: 100%;
     height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+/* style for each image in the carousel */
+.carousel_image{
+    object-fit:cover;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 6/2.8;
     display: block;
 }
+
+/* style for arrow buttons in the carousel */
+.carousel_button{
+    all: unset;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding: 1 rem;
+    cursor: pointer;
+}
+
+/* on hover, the button background area of the button should turn black */
+.carousel_button:hover{
+    background-color: black;
+    opacity: 0.2;
+}
+
+.carousel_button > * {
+    stroke: white;
+    fill: black;
+    width: 2rem;
+    height: auto;
+}
+
+/* position arrows at respective posotions*/
+.right{
+    right: 0;
+}
+
+.left{
+    left: 0;
+}
+
