--- a/tropical_traverse/src/app/components/navbar.css
+++ b/tropical_traverse/src/app/components/navbar.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     align-items: right;
-    /* justify-content: space-between; */
     background: #1A5C74;
 }
 
@@ -10,10 +9,9 @@
     flex: 1;
     list-style: none;
     text-align: right;
-    
 }
 
-.login{
+.button{
     color: #FFFFFF;
     background-color: #F4CE39;
     border: none;
