new form for driver

--- a/tropical_traverse/src/app/signUp/signUp.css
+++ b/tropical_traverse/src/app/signUp/signUp.css
@@ -29,7 +29,7 @@ h1{
     height: 50px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    color: white;
+    /* color: white; */
     padding-left: 5%;
     margin: 3%;
 
