--- a/tropical_traverse/src/app/components/infoList/infoList.css
+++ b/tropical_traverse/src/app/components/infoList/infoList.css
@@ -1,10 +1,56 @@
 .title{
-    font-size: 100%;
+    font-size: 200%;
+}
+
+.top_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    padding-left: 14%;
+    padding-top: 4%;
 }
 
 .wrapper{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:flex-start;
+    flex-direction:row;
+    margin: 3% 6% 5% 10%;
+    flex-wrap: wrap;
+}
+
+.image-wrapper img{
+    background-color: #1A5C74;
+    padding-bottom: 20%;
+    width: 350px;
+    height: 420px;
+}
+
+.image-wrapper{
+    padding: 2%;
+    position: relative;
+}
+
+.image{
+    width: 400px;
+    height:420px;
+    border-radius: 10%;
+    transition: transform 0.3s ease;
+}
+
+.image-wrapper:hover .image {
+    transform: translateY(-10px); /* Move image up on hover */
+  }
+
+.image-wrapper:hover{
+    /* transition: transform 150ms; */
+    transform: translateY(-10px);
+}
+
+.destination-name{
+    position: absolute; 
+    top:82%;
+    right: 40%;
+    left: 20%;
+    font-size: 160%;
+    color: white;
+    transition: transform 0.3s ease;
 }
