--- a/tropical_traverse/src/app/components/infoList/infoList.css
+++ b/tropical_traverse/src/app/components/infoList/infoList.css
@@ -1,4 +1,5 @@
 .title{
+    color: #7D7D7D;
     font-size: 200%;
 }
 
@@ -54,3 +55,5 @@
     color: white;
     transition: transform 0.3s ease;
 }
+
+
