--- a/tropical_traverse/src/app/components/contact/contact.css
+++ b/tropical_traverse/src/app/components/contact/contact.css
@@ -1,5 +1,5 @@
 .contact-person-image{
-    width: 90%;
+    width: 103%;
     height: auto;
     padding-left: 15%;
 }
@@ -14,49 +14,59 @@
     padding-top: 20%;
     padding-left: 5%;
 }
-/* 
-.form-form{
-    display: flex;
-    flex-direction: column;
-}
-
-.form-class{
-    height: 50px;
-    border-radius: 5px;
-    color: rgb(0, 0, 0);
-    padding-left: 5%;
-    margin-right: 8%;
-    margin-bottom: 2%;
-
-    &::placeholder{
-        color: lightgrey;
-    }
-} */
 
 form {
-    /* add styling to the form element */
-    background-color: #f2f2f2;
     padding: 20px;
     border-radius: 5px;
   }
+   .form-form{
+    margin-top: 7%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 45%;
+   }
 
 .form-class {
-  /* add styling to the input and textarea elements */
-  width: 100%;
+  width: 40%;
+  height: 8vh;
   padding: 12px;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 4px;
-  box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-size: 100%;
+}
+
+.message{
+    height: 15vh;
 }
 
 .submit-contact {
     /* add styling to the submit button element */
     background-color: #4CAF50;
     color: white;
-    padding: 12px 20px;
+    padding: 15px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 40%;
   }
+
+.contact-label{
+    font-size: 200%;
+    padding-bottom: 9%;
+}
+
+.contact-info{
+    color: #7D7D7D;
+    padding-bottom: 27%;
+    font-size: 120%;
+}
+
+.left-side{
+    margin-left: 12%;
+    position: absolute;
+    top: 145%;
+}
