--- a/tropical_traverse/src/app/touristProfilePage/touristProfilePage.css
+++ b/tropical_traverse/src/app/touristProfilePage/touristProfilePage.css
@@ -46,7 +46,6 @@
 }
 
 .trips-profile{
-    /* padding-right: 10%; */
     position: relative;
     right: 5%;
 }
@@ -111,4 +110,6 @@
     border: none;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
+    font-size: 90%;
 }
