--- a/tropical_traverse/src/app/driverSignup/driverSignup.css
+++ b/tropical_traverse/src/app/driverSignup/driverSignup.css
@@ -1,12 +1,13 @@
 .container{
-    width: 100vw;
-    height: 100vh;
     background-image: url("../assets/background4.jpg");
+    background-size: cover ;
+    background-repeat: no-repeat;
+    padding: 2%;
 }
 
-form{
-    background-color: lightgray;
-    /* margin: 10% 35%; */
+.create-form{
+    background-color: rgb(227, 227, 227);
+    margin-top: 10%;
     width: 30%;
     height: auto;
     display: flex;
@@ -15,8 +16,9 @@ form{
     padding: 5%;
     border-radius: 2%;
     position: relative;
-    top: 20%;
+    top: 10%;
     left: 35%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h1{
@@ -32,6 +34,8 @@ h1{
     color: rgb(0, 0, 0);
     padding-left: 5%;
     margin: 3%;
+    border: none;
+    border-radius: 4px;
 
     &::placeholder{
         color: lightgrey;
@@ -47,6 +51,7 @@ h1{
     cursor: pointer;
     background-color: rgb(2, 54, 76);
     color: white;
+    border: none;
 }
 
 span{
@@ -59,6 +64,28 @@ span{
 }
 
 b{
-    color: rgb(236, 236, 236);
+    color: rgb(100, 100, 100);
     cursor: pointer;
+    background-color:rgb(227, 227, 227);
+    border: none;
+}
+
+.live{
+    margin-top: 4%;
+    display: flex;
+    flex-direction: column;
+    color: rgb(140, 140, 140);
+}
+
+.live-options{
+    margin-top: 3%;
+    margin-bottom: 5%;
+    width: 98%;
+    height: 50px;
+    color: rgb(140, 140, 140);
+}
+
+.sl{
+    color: rgb(140, 140, 140);
+    margin-left: 4%;
 }
