--- a/tropical_traverse/src/app/login/login.css
+++ b/tropical_traverse/src/app/login/login.css
@@ -1,12 +1,11 @@
-.container{
+.login-container{
     width: 100vw;
     height: 100vh;
     background-image: url("../assets/background4.jpg");
 }
 
 form{
-    background-color: lightgray;
-    /* margin: 10% 35%; */
+    background-color: rgb(227, 227, 227);
     width: 30%;
     height: auto;
     display: flex;
@@ -25,13 +24,15 @@ h1{
     padding: 5%;
 }
 
-.form-control{
+.loginform-control{
     height: 50px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     padding-left: 5%;
     margin: 3%;
+    border: none;
+    border-radius: 4px;
 
     &::placeholder{
         color: lightgrey;
@@ -59,6 +60,8 @@ span{
 }
 
 b{
-    color: rgb(236, 236, 236);
+    color: rgb(100, 100, 100);
     cursor: pointer;
+    background-color:rgb(227, 227, 227);
+    border: none;
 }
