--- a/tropical_traverse/src/app/roles/roles.css
+++ b/tropical_traverse/src/app/roles/roles.css
@@ -20,6 +20,7 @@ h3{
     border-radius: 10px;
     border: none;
     transition: all 0.4s ease;
+    background-color: white;
 }
 
 .driverButton:hover{
@@ -27,12 +28,16 @@ h3{
 }
 
 .userButton{
-    padding: 3% 8%;
-    margin: 2%;
+    padding-top: 4.5%;
+    padding-bottom: 3%;
+    padding-left: 8%;
+    padding-right: 9%;
+    margin-left: 2%;
     cursor: pointer;
     border-radius: 10px;
     border: none;
     transition: all 0.4s ease;
+    background-color: white;
 }
 
 .userButton:hover{
