--- a/tropical_traverse/src/app/signUp/signUp.css
+++ b/tropical_traverse/src/app/signUp/signUp.css
@@ -1,12 +1,11 @@
-.container{
+.signupContainer{
     width: 100vw;
     height: 100vh;
     background-image: url("../assets/background4.jpg");
 }
 
 form{
-    background-color: lightgray;
-    /* margin: 10% 35%; */
+    background-color: rgb(227, 227, 227);
     width: 30%;
     height: auto;
     display: flex;
@@ -15,8 +14,9 @@ form{
     padding: 5%;
     border-radius: 2%;
     position: relative;
-    top: 20%;
+    top: 15%;
     left: 35%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h1{
@@ -25,13 +25,15 @@ h1{
     padding: 5%;
 }
 
-.form-control{
+.sigupform-control{
     height: 50px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     padding-left: 5%;
     margin: 3%;
+    border: none;
+    border-radius: 4px;
 
     &::placeholder{
         color: lightgrey;
@@ -47,6 +49,8 @@ h1{
     cursor: pointer;
     background-color: rgb(2, 54, 76);
     color: white;
+    border: none;
+    border-radius: 4px;
 }
 
 span{
@@ -59,6 +63,8 @@ span{
 }
 
 b{
-    color: rgb(236, 236, 236);
+    color: rgb(100, 100, 100);
     cursor: pointer;
+    background-color:rgb(227, 227, 227);
+    border: none;
 }
